[package]
name = "mongodb-ro"
version = "0.1.5"
edition = "2021"
description = "A high-level, type-safe MongoDB model implementation"
license = "MIT OR Apache-2.0"
authors = ["Kak Smko <ba.smko@gmail.com>"]
repository = "https://github.com/kak-smko/mongodb-ro"
documentation = "https://docs.rs/mongodb-ro"
readme = "README.md"
keywords = ["mongodb", "mongodb-orm","orm","model"]
categories = ["database"]


[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]


[dependencies]
mongodb-ro-derive="0.1.2"
mongodb= { version = "3.2.0",features = ["default"] }
serde = "1.0.217"
serde_json = "1.0.135"
log = "0.4.22"
futures-util = "0.3.31"
futures = "0.3.31"
tokio = "1.43.0"
